getFirst() method is used